# auto_media_platform

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: index.md  requirements.txt
src/auto_media_platform/: __version__.py  main.py
