[tool.poetry]
name = "auto_media_platform"
version = "0.0.1"
description = "generate video and upload to multiple media platform automatically"
authors = ["idlewith <newellzhou@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mp = "auto_media_platform.main:main"
